--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,11 @@
+# Application Properties
 server.port=8765
 spring.application.name=api-gateway
-
 spring.cloud.gateway.discovery.locator.enabled=true
 spring.cloud.gateway.discovery.locator.lower-case-service-id=true
 
+# Actuator Properties
+management.security.enabled=false
+
+# API Discovery Server Properties
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
