--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,10 +18,10 @@ services:
     restart: always
     ports:
       - "8761:8761"
-    healthcheck:
-      test: curl http://localhost:8761
     networks:
       - api_gateway_network
+    healthcheck:
+      test: curl http://localhost:8761/actuator/health
 networks:
   api_gateway_network:
     name: api_gateway_network
