--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,6 +6,8 @@ spring.cloud.gateway.discovery.locator.lower-case-service-id=true
 
 # Actuator Properties
 management.security.enabled=false
+management.endpoint.health.show-details=always
+management.health.circuitbreakers.enabled:true
 
 # API Discovery Server Properties
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
