--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 # Application Properties
-server.port=8765
+server.port=${PORT}
 spring.application.name=api-gateway
 spring.cloud.gateway.discovery.locator.enabled=true
 spring.cloud.gateway.discovery.locator.lower-case-service-id=true
@@ -7,7 +7,7 @@ spring.cloud.gateway.discovery.locator.lower-case-service-id=true
 # Actuator Properties
 management.security.enabled=false
 management.endpoint.health.show-details=always
-management.health.circuitbreakers.enabled:true
+management.health.circuitbreakers.enabled=true
 
 # API Discovery Server Properties
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
