--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,6 +5,8 @@ services:
     container_name: api_gateway
     env_file:
       - api_gateway.env
+    ports:
+      - "8765:8765"
     networks:
       - api_gateway_network
     depends_on:
@@ -15,6 +17,8 @@ services:
     container_name: api_discovery_server
     env_file:
       - api_discovery_server.env
+    ports:
+      - "8761:8761"
     networks:
       - api_gateway_network
     healthcheck:
