--- a/deployment/prod/docker-compose.yml
+++ b/deployment/prod/docker-compose.yml
@@ -1,10 +1,29 @@
-version: "3.8"
 services:
+  api-discovery-server:
+    image: elleined/api-discovery-server:${IMAGE_TAG}
+    container_name: ${CONTAINER_NAME}
+    restart: always
+    environment:
+      - TZ=Asia/Manila
+      - PORT=${PORT}
+      - LOG_LEVEL=${LOG_LEVEL}
+      - ALLOWED_ORIGINS=${ALLOWED_ORIGINS}
+    ports:
+      - "${PORT}:${PORT}"
+    networks:
+      - prod-discovery-server-network
+    healthcheck:
+      test: [ "CMD", "wget", "--spider", "http://${CONTAINER_NAME}:${PORT}/actuator/health" ]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+      start_period: 30s
+
   api_gateway:
     image: elleined/api-gateway:latest
     container_name: api_gateway
     env_file:
-      - api_gateway.env
+      - ../api_gateway.env
     ports:
       - "8765:8765"
     networks:
@@ -16,7 +35,7 @@ services:
     image: elleined/api-discovery-server:latest
     container_name: api_discovery_server
     env_file:
-      - api_discovery_server.env
+      - ../api_discovery_server.env
     ports:
       - "8761:8761"
     networks:
