--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,38 @@
-# Application Properties
+# ===============================
+# Application Identity & Server
+# ===============================
 server.port=${PORT}
 spring.application.name=api-gateway
+
+# ===============================
+# API Gateway
+# ===============================
 spring.cloud.gateway.discovery.locator.enabled=true
 spring.cloud.gateway.discovery.locator.lower-case-service-id=true
 
-# Actuator Properties
-management.security.enabled=false
-management.endpoint.health.show-details=always
-management.health.circuitbreakers.enabled=true
+# ===============================
+# Logging Configuration
+# ===============================
+logging.level.com.elleined.api_gateway=${LOG_LEVEL}
 
-# API Discovery Server Properties
-eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
+# ===============================
+# Actuator & Monitoring
+# ===============================
+management.endpoints.access.default=read_only
+management.endpoints.web.exposure.include=health,info
+management.endpoint.health.show-details=always
+
+# ===============================
+# Virtual Threads
+# ===============================
+spring.threads.virtual.enabled=true
+
+# ===============================
+# Eureka Discovery Client
+# ===============================
+eureka.client.service-url.defaultZone=http://${DISCOVERY_SERVER_HOST}:${SERVICE_DISCOVERY_PORT}
+
+# =================
+# Custom Properties
+# =================
+allowed-origins=${ALLOWED_ORIGINS}
