--- a/deployment/dev/.env
+++ b/deployment/dev/.env
@@ -1,16 +1,15 @@
-# ======================
-# Application Properties
-# ======================
-LOG_LEVEL=DEBUG
-ALLOWED_ORIGINS=http://localhost:4200,http://localhost:4201,http://localhost:5173,http://localhost:5174
-PORT=8765
-
 # ==========================
 # Discovery Server
 # ==========================
-DISCOVERY_SERVER_HOST=localhost
+LOG_LEVEL=DEBUG
+ALLOWED_ORIGINS=http://localhost:4200,http://localhost:4201,http://localhost:5173,http://localhost:5174
 DISCOVERY_SERVER_PORT=8761
 
 # Container properties
 CONTAINER_NAME=api-discovery-server
 IMAGE_TAG=v1.0.0
+
+# ============
+# Network
+# ============
+NETWORK_NAME=dev-api-gateway-network
