Refactor Docker Compose for consistent naming and env vars
Align container and network naming conventions in Docker Compose files. Introduce environment variables for `DISCOVERY_SERVER_CONTAINER_NAME`, `DISCOVERY_SERVER_IMAGE_TAG`, and `NETWORK_NAME` to enhance flexibility and maintainability.

--- a/deployment/dev/docker-compose.yml
+++ b/deployment/dev/docker-compose.yml
@@ -1,5 +1,5 @@
 services:
-  api-discovery-server:
+  dev-api-discovery-server:
     image: elleined/api-discovery-server:${IMAGE_TAG}
     container_name: ${CONTAINER_NAME}
     restart: always
