--- a/deployment/prod/.env
+++ b/deployment/prod/.env
@@ -1,12 +1,24 @@
 # ======================
 # Application Properties
 # ======================
-LOG_LEVEL=DEBUG
-ALLOWED_ORIGINS=http://localhost:4200,http://localhost:4201,http://localhost:5173,http://localhost:5174
 PORT=8765
+LOG_LEVEL=INFO
+
+# Container properties
+IMAGE_TAG=v1.0.0
+CONTAINER_NAME=prod-api-gateway
 
 # ==========================
 # Discovery Server
 # ==========================
-DISCOVERY_SERVER_HOST=localhost
+ALLOWED_ORIGINS=http://localhost:4200,http://localhost:4201,http://localhost:5173,http://localhost:5174
 DISCOVERY_SERVER_PORT=8761
+
+# Container properties
+DISCOVERY_SERVER_CONTAINER_NAME=prod-api-discovery-server
+DISCOVERY_SERVER_IMAGE_TAG=v1.0.0
+
+# ============
+# Network
+# ============
+NETWORK_NAME=prod-api-gateway-network
