--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -30,4 +30,4 @@ spring.threads.virtual.enabled=true
 # ===============================
 # Eureka Discovery Client
 # ===============================
-eureka.client.service-url.defaultZone=http://${DISCOVERY_SERVER_HOST}:${SERVICE_DISCOVERY_PORT}
+eureka.client.service-url.defaultZone=http://${DISCOVERY_SERVER_HOST}:${DISCOVERY_SERVER_PORT}/eureka/
