--- a/deployment/prod/docker-compose.yml
+++ b/deployment/prod/docker-compose.yml
@@ -1,17 +1,18 @@
 services:
-  api-discovery-server:
-    image: elleined/api-discovery-server:${IMAGE_TAG}
+  prod-api-gateway:
+    image: elleined/api-gatewat:${IMAGE_TAG}
     container_name: ${CONTAINER_NAME}
     restart: always
     environment:
       - TZ=Asia/Manila
       - PORT=${PORT}
       - LOG_LEVEL=${LOG_LEVEL}
-      - ALLOWED_ORIGINS=${ALLOWED_ORIGINS}
+      - DISCOVERY_SERVER_HOST=${DISCOVERY_SERVER_CONTAINER_NAME}
+      - DISCOVERY_SERVER_PORT=${DISCOVERY_SERVER_PORT}
     ports:
       - "${PORT}:${PORT}"
     networks:
-      - prod-discovery-server-network
+      - prod-api-gateway-network
     healthcheck:
       test: [ "CMD", "wget", "--spider", "http://${CONTAINER_NAME}:${PORT}/actuator/health" ]
       interval: 30s
@@ -19,36 +20,29 @@ services:
       retries: 3
       start_period: 30s
 
-  api_gateway:
-    image: elleined/api-gateway:latest
-    container_name: api_gateway
-    env_file:
-      - ../api_gateway.env
+  prod-api-discovery-server:
+    image: elleined/api-discovery-server:${DISCOVERY_SERVER_IMAGE_TAG}
+    container_name: ${DISCOVERY_SERVER_CONTAINER_NAME}
+    restart: always
+    environment:
+      - TZ=Asia/Manila
+      - PORT=${DISCOVERY_SERVER_PORT}
+      - LOG_LEVEL=${LOG_LEVEL}
+      - ALLOWED_ORIGINS=${ALLOWED_ORIGINS}
     ports:
-      - "8765:8765"
+      - "${DISCOVERY_SERVER_PORT}:${DISCOVERY_SERVER_PORT}"
     networks:
-      - api_gateway_network
-    depends_on:
-      api_discovery_server:
-        condition: service_healthy
-  api_discovery_server:
-    image: elleined/api-discovery-server:latest
-    container_name: api_discovery_server
-    env_file:
-      - ../api_discovery_server.env
-    ports:
-      - "8761:8761"
-    networks:
-      - api_gateway_network
+      - prod-api-gateway-network
     healthcheck:
-      test: curl http://localhost:8761/actuator/health
+      test: [ "CMD", "wget", "--spider", "http://${DISCOVERY_SERVER_CONTAINER_NAME}:${DISCOVERY_SERVER_PORT}/actuator/health" ]
       interval: 30s
-      timeout: 20s
+      timeout: 10s
       retries: 3
-      start_period: 120s
+      start_period: 30s
+
 networks:
-  api_gateway_network:
-    name: api_gateway_network
+  prod-api-gateway-network:
+    name: ${NETWORK_NAME}
     external: false
     ipam:
       driver: default
