- Upgraded github actions dependencies - Upgraded to spring boot 3.5.10

--- a/deployment/dev/.env
+++ b/deployment/dev/.env
@@ -1,8 +1,14 @@
+# ======================
+# Application Properties
+# ======================
+PORT=8765
+LOG_LEVEL=DEBUG
+ALLOWED_ORIGINS=http://localhost:4200,http://localhost:4201,http://localhost:5173,http://localhost:5174,http://localhost:5175
+
 # ==========================
 # Discovery Server
 # ==========================
-LOG_LEVEL=DEBUG
-ALLOWED_ORIGINS=http://localhost:4200,http://localhost:4201,http://localhost:5173,http://localhost:5174
+DISCOVERY_SERVER_HOST=localhost
 DISCOVERY_SERVER_PORT=8761
 
 # Container properties
