--- a/deployment/prod/.env
+++ b/deployment/prod/.env
@@ -3,20 +3,20 @@
 # ======================
 PORT=8765
 LOG_LEVEL=INFO
+ALLOWED_ORIGINS=http://localhost:4200,http://localhost:4201,http://localhost:5173,http://localhost:5174,http://localhost:5175
 
 # Container properties
-IMAGE_TAG=v1.0.0
+IMAGE_TAG=v2.0.1
 CONTAINER_NAME=prod-api-gateway
 
 # ==========================
 # Discovery Server
 # ==========================
-ALLOWED_ORIGINS=http://localhost:4200,http://localhost:4201,http://localhost:5173,http://localhost:5174
 DISCOVERY_SERVER_PORT=8761
 
 # Container properties
 DISCOVERY_SERVER_CONTAINER_NAME=prod-api-discovery-server
-DISCOVERY_SERVER_IMAGE_TAG=v1.0.0
+DISCOVERY_SERVER_IMAGE_TAG=v2.0.1
 
 # ============
 # Network
